# post

./: Cargo.toml  README.md  clippy.toml  flake.nix
crates/post-cli/: Cargo.toml
crates/post-cli/src/: main.rs
crates/post-core/: Cargo.toml
crates/post-core/src/: config.rs  lib.rs  oauth.rs
crates/post-reddit/: Cargo.toml
crates/post-reddit/src/: auth.rs  client.rs  lib.rs
crates/post-x/: Cargo.toml
crates/post-x/src/: auth.rs  client.rs  lib.rs
src/: auth.rs  cli.rs  config.rs  main.rs
