[package]
name = "xpost"
version = "0.1.0"
edition = "2024"
description = "Post to X from your terminal"
license = "MIT"
rust-version = "1.91.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
eyre = "0.6"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# OAuth
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"

# Config storage
directories = "6"

# Local HTTP server for OAuth callback
axum = "0.8"

# URL handling
url = "2"
open = "5.3.3"
urlencoding = "2.1.3"

[lints.clippy]
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
collapsible_if = "allow"
doc_lazy_continuation = "allow"
doc_markdown = "allow"
many_single_char_names = "allow"
match_same_arms = "allow"
single_match_else = "allow"
uninlined_format_args = "deny"
missing_const_for_fn = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
future_not_send = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
struct_excessive_bools = "allow"
multiple_crate_versions = "allow"
similar_names = "allow"

[lints.rust]
dead_code = "allow"
unsafe_code = "warn"

[profile.release]
lto = true
strip = true
panic = "abort"
