[package]
name = "post-reddit"
description = "Reddit posting support for post CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
post-core.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
base64.workspace = true

[lints]
workspace = true
